tests/baselines/reference/interfaceWithPrivateMember.errors.txt
==== tests/cases/conformance/types/namedTypes/interfaceWithPrivateMember.ts (5 errors) ====
    // interfaces do not permit private members, these are errors
    
    interface I {
        private x: string;
        ~~~~~~~
!!! error TS1131: Property or signature expected.
    }
    
    interface I2<T> {
        private y: T;
        ~~~~~~~
!!! error TS1131: Property or signature expected.
    }
    
    var x: {
        private y: string;
        ~~~~~~~
!!! error TS1131: Property or signature expected.
                   ~~~~~~
!!! error TS2304: Cannot find name 'string'.
    }
    ~
!!! error TS1128: Declaration or statement expected.